<resources>
    <string name="app_name">FAST Prints</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_file">Upload File</string>
    <string name="home">HOME</string>
    <string name="print_instructions">Press upload button to upload the document you want to print.\nAfter placing order, your printing order will be shown in the Cart tab.</string>
    <string name="cart">CART</string>
    <string name="account">ACCOUNT</string>
    <string name="print_orders">Print Orders</string>
    <string name="cart_instructions">Please press \'Collect\' after you have collected your print order.\nOrders cannot be canceled after 30 minutes of the order time.</string>
    <string name="filename">Filename:</string>
    <string name="order_time">Order Time:</string>
    <string name="collect">Collect</string>
    <string name="collect_date">Collect Date:</string>
    <string name="order_id">Order Id:</string>
    <string name="about_us">Established in 2012, FAST Print is continually grown to serve corporate conglomerate, GLCs, educational institutional and business to business (B2B) demands. Today FAST Print are privileged to connect thousands of customers every day with customization of printing products as well as diverse range of digital to offset segments, print on demand, design consultation and services, apparels printing, embroidery, corporate gift, advertisement signages and etc.</string>
    <string name="about_us_title">About Us</string>
    <string name="services_title">Services</string>
    <string name="services">The services we provide in shop:\nNon Woven Bag (RM 0.50/bag)\nThank You Card (RM 0.05/piece)\nSticker (RM0.05/sheet)\nThesis Hard Cover (RM 0.50/piece)\nFace Mask Printing (RM 0.05/piece)\nBusiness Card (RM 0.01/piece)\nRubberstamp (RM2.50/piece)\nPoster (RM 0.50/piece)\nAnd so much more...\nPlease contact us for customizations.\nTerms and Conditions Applied.</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="address">20, Jalan Bunga Tanjung 2/16,\n Seksyen 2, 40000, Shah Alam,\n Selangor</string>
    <string name="email">service@fastprints.my</string>
    <string name="phoneNumber">03-5525 0588   </string>
    <string name="fast_prints_logo_alt">FASTS Prints logo</string>
    <string name="home_tab_content_description">Home Tab Cover Photo</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_of_copies">Total of Copies</string>
    <string name="total_copies_to_print">Total Copies to Print:</string>
    <string name="paper_size">Paper Size:</string>
    <string name="b5">B5</string>
    <string name="a5">A5</string>
    <string name="a4">A4</string>
    <string name="a3">A3</string>
    <string name="colour_mode">Colour Mode:</string>
    <string name="coloured">Coloured</string>
    <string name="black_and_white">Black and White</string>
    <string name="total_payment">Total Payment:</string>
    <string name="rm_0_00">RM 0.00</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="payment_method">Payment Method:</string>
    <string name="maybank">Maybank</string>
    <string name="affin_bank">Affin Bank</string>
    <string name="cimb_bank">CIMB Bank</string>
    <string name="public_bank">Public Bank</string>
    <string name="pricing">*RM1.00 Per Copy for Any Paper Size with Black and White\n  RM2.00 Per Copy for Any Paper Size with Colour</string>
    <string name="register">Register</string>
    <string name="register_title">FAST Prints\nRegister Account</string>
    <string name="do_not_have_account_register_here"><u>Do not have account? Register here!</u></string>
    <string name="login_title">FAST Prints\nLogin</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="log_out">Log Out</string>
    <string name="working_hour">Working Hour: 10am - 6pm Daily except Public Holidays</string>
    <string name="cancel">Cancel</string>
    <string name="order_placed_successfully">Order Placed Successfully!</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="orders_can_be_seen_in_cart_tab">Orders can be seen in Cart Tab</string>
    <string name="order_placed_successfully_content_description">order placed successfully</string>
    <string name="first_name">First Name:</string>
    <string name="email_text">Email:</string>
    <string name="last_name">Last Name:</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="instructions">Instructions</string>
    <string name="cancel_order"><u>Cancel Order</u></string>
    <string name="file_type">Upload PDF, Word, Excel, PowerPoint or Txt File</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="account_title">Account</string>
    <string name="back_to_login"><u>Back to Login</u></string>
</resources>